Support excluding roles for SAML realm
This PR adds a new setting `exclude_roles` for SAML realm, which allows
excluding certain roles from being mapped to users which are
authenticated via SAML realm.